[gd_scene format=3 uid="uid://df1vd6w4gonq"]

[ext_resource type="Material" uid="uid://dguajrylbaalc" path="res://blood_particle_processor.tres" id="1_ydgic"]
[ext_resource type="Script" uid="uid://ctt8dqj00nfsi" path="res://mesh_particles.gd" id="2_pgqtp"]
[ext_resource type="TubeTrailMesh" uid="uid://cjk1g4tieg5hw" path="res://blood_drip_mesh.tres" id="2_v260f"]
[ext_resource type="Script" uid="uid://dlsydctoxqbwy" path="res://components/damage_component.gd" id="3_ydgic"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v260f"]
radius = 1.5

[node name="mesh_particle_component" type="GPUParticles3D" unique_id=623471976]
transform = Transform3D(0.9999998, 0, 0, 0, 0.99999994, 0, 0, 0, 1, 0, 0, 0)
amount = 32
process_material = ExtResource("1_ydgic")
draw_pass_1 = ExtResource("2_v260f")
script = ExtResource("2_pgqtp")

[node name="Timer" type="Timer" parent="." unique_id=932262381]
wait_time = 15.0
autostart = true

[node name="DamageComponent" type="Area3D" parent="." unique_id=1405052281]
transform = Transform3D(1, -2.9802322e-08, 0, 2.9802322e-08, 1, 0, 0, -7.450581e-09, 1, 0, 0, 0)
collision_layer = 8
collision_mask = 13
monitoring = false
monitorable = false
script = ExtResource("3_ydgic")
damage_types = Dictionary[int, float]({
6: 1.0
})
metadata/_custom_type_script = "uid://dlsydctoxqbwy"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageComponent" unique_id=1913875330]
shape = SubResource("SphereShape3D_v260f")
debug_color = Color(0.99215686, 0, 0, 0.41960785)

[node name="OmniLight3D" type="OmniLight3D" parent="." unique_id=320116380]
layers = 3
light_color = Color(1, 0.3882353, 0, 1)
light_energy = 0.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
